--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         /************************全局变量========start*************************/
-        buildConfigField "String", "BASE_URL", '"http://192.168.0.167:8080"'
+//
+        buildConfigField "String", "BASE_URL", '"https://www.apiopen.top"'
         buildConfigField "boolean", "ERROR_LOG", "true"  //控制后台打印log日志
         /************************全局变量========end*************************/
     }
@@ -29,18 +30,19 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     /*    testImplementation 'junit:junit:4.12'
-        androidTestImplementation 'com.android.support.test:runner:1.0.1'
-        androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'*/
+                            androidTestImplementation 'com.android.support.test:runner:1.0.1'
+                            androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'*/
     implementation project(path: ':mdpulltorefresh')
     //网络部分
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    //RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     //View
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.jakewharton:disklrucache:2.0.2'
 }
