--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     /*    testImplementation 'junit:junit:4.12'
-                            androidTestImplementation 'com.android.support.test:runner:1.0.1'
-                            androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'*/
+                                androidTestImplementation 'com.android.support.test:runner:1.0.1'
+                                androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'*/
     implementation project(path: ':mdpulltorefresh')
     //网络部分
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.jakewharton:disklrucache:2.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
